--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -158,12 +158,11 @@
 </style>
 
 <body>
-
     <div id="content">
         <img src="ulivo2.png" class="ribbon" />
     </div>
 
-    <div class="row" id="intestazione">
+        <div class="row" id="intestazione">
     <div class="col-lg-8 col-md-6 col-sm-6"></div>
         <div class="col-lg-4 col-md-6 col-sm-6">
  
@@ -210,90 +209,24 @@
 
 
                 </div>
-                <div class="row">
-
-
-
-                    <div class="col-lg-12">
-                        <img src="ulivo1.png" id="olive1" class="ribbon" />
-                        <p id="D" style="color:#3c4e43;font-size: 300%;">D</p>
-                        <p id="D" style="color:white;font-size: 300%;">V</p>
-
-                        <img src="ulivo2.png" id="olive2" class="ribbon" />
-                    </div>
-
-                </div>
-                <br>
-                <br>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <img src="spsi2.png" class="ribbon" />
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-6 col-sm-6 col-md-6">
-
-                    </div>
-                    <div class="col-lg-6 col-sm-6 col-md-6" >
-                                                        <iframe  class="description"  id="mappa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3018.6610347905494!2d17.433065015271445!3d40.83540847931869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x134648df272bcb33%3A0xf1e04c56e087b713!2sMasseria%20La%20Macina!5e0!3m2!1sit!2sit!4v1619884156341!5m2!1sit!2sit" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                        
-                    </div> 
-                </div>
-               
-        <div class="container" style="font-family: 'Prata', sans-serif;">
-            <h4>Timeline Style : Demo-5</h4>
+                
             <div class="row">
-                <div class="col-md-12">
-                    <div class="main-timeline5">
-                        <div class="timeline">
-                            <div class="timeline-icon"><span class="year">2018</span></div>
-                            <div class="timeline-content">
-                                <h3 class="title">Web Desginer</h3>
-                                <p class="description">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia mi ultrices, luctus nunc ut, commodo enim. Vivamus sem erat.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="timeline">
-                            <div class="timeline-icon"><span class="year">2017</span></div>
-                            <div class="timeline-content">
-                                <h3 class="title">Web Developer</h3>
-                                <iframe  class="description"  id="mappa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3018.6610347905494!2d17.433065015271445!3d40.83540847931869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x134648df272bcb33%3A0xf1e04c56e087b713!2sMasseria%20La%20Macina!5e0!3m2!1sit!2sit!4v1619884156341!5m2!1sit!2sit" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                            </div>
-                        </div>
-                        <div class="timeline">
-                            <div class="timeline-icon"><span class="year">2016</span></div>
-                            <div class="timeline-content">
-                                <h3 class="title">Web Desginer</h3>
-                                <p class="description">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia mi ultrices, luctus nunc ut, commodo enim. Vivamus sem erat.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="timeline">
-                            <div class="timeline-icon"><span class="year">2015</span></div>
-                            <div class="timeline-content">
-                                <h3 class="title">Web Developer</h3>
-                                <p class="description">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia mi ultrices, luctus nunc ut, commodo enim. Vivamus sem erat.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+        <div class="col-lg-12">
+            <div id="titolo">
+                <h1 id="data" style="color:#82923d;font-size: 200%;">Qualcosa è andato storto....</h1>
             </div>
         </div>
-        <hr>
-
-            </div>
+    </div>   
+    <div class="row">
+       <div class="col-lg-12">
+            <a class="btn btn-secondary" href="/" role="button">Home</a>
+        </div>
+    </div>   
+</div>  
+ <div class="row" id="intestazione" style="height:100%;">
+        <div class="col-lg-12">
         </div>
     </div>
-    
-
-
-
-
-
 </body>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
