--- a/src/main/resources/templates/uploadForm.html
+++ b/src/main/resources/templates/uploadForm.html
@@ -11,11 +11,11 @@
         text-shadow: 3px 3px 3px #ababab;
         background-color: #adbaa4;
     }
-    
+
     h3,h4{
     font-family: "Prata", sans-serif;
     }
-    
+
 	p {
 	font-family: "Prata", sans-serif;
 	}
@@ -62,9 +62,9 @@
     }
 
     .post .imgPost {
-      
+
         height: 40vh;
-       
+
     }
 
     #breakline {
@@ -108,12 +108,12 @@
     inserisciCommento{
     	display: inline;
     }
-    
+
     #mappa{
     height:25%;
     width:25%;
     }
-    
+
     #content img {
         position: absolute;
         top: 0;
@@ -126,18 +126,27 @@
     	background-color:#82923d;
     	text-align: center;
     }
-    
+
     .commento{
     	background-color:#82923d;
     	text-align: center;
     	color:white;
     }
     .boxCommento{
-    border-style:solid; 
-    border-color:black; 
+    border-style:solid;
+    border-color:black;
     border-width:2px;
     }
     
+    .error{
+ 	border:1px solid red;
+    }
+    #intestazione {
+        height: 5rem;
+        background-color: #adbaa4;
+        text-align: center;
+    }
+
 
 </style>
 
@@ -145,10 +154,16 @@
 
 	 <div id="content">
         <img src="ulivo2.png" class="ribbon" />
-    </div>>
+    </div>
 
-    <div class="row" id="intestazione">
-        <div class="col-lg-12">
+       <div class="row" id="intestazione">
+    <div class="col-lg-8 col-md-6 col-sm-6"></div>
+        <div class="col-lg-4 col-md-6 col-sm-6">
+ 
+    <button class="btn btn-outline-success" type="button"> <a class="btn btn-secondary" href="/" role="button">Home</a></button>
+    <button class="btn btn-sm btn-outline-secondary" type="button"> <a class="btn btn-secondary" href="/upload" role="button">Post</a></button>
+ 
+
         </div>
     </div>
     <div class="row">
@@ -188,45 +203,82 @@
 
 
                 </div>
-                <div class="row" style="height:7rem;">
+                <div class="row">
                 <div class="col-lg-3"></div>
                 <div class="col-lg-6">
-                	<form  method="POST" enctype="multipart/form-data" action="/upload">
-  		<div class="custom-file">
-    <input type="file" class="custom-file-input" id="customFile" name="file">
-    <label class="custom-file-label" for="customFile">Scegli La Foto</label>
-    <input id="uploadFile" type="submit" value="Carica" disabled/>
+                	<!--form>
+  <div class="form-group" method="POST" enctype="multipart/form-data" action="/upload">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="file" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
   </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <div class="form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+  </div>
+  <button type="submit" class="btn btn-secondary">Submit</button>
+</form-->
+
+
+
+<form id="formUpload" method="POST" enctype="multipart/form-data" action="/upload">
+
+<div class="form-group custom-file">
+<input type="file" class="custom-file-input" id="customFile" name="file">
+<label class="custom-file-label" for="customFile">Scegli La Foto</label>
+</div>
+<br>
+<br>
+
+<div class="form-group">
+
+  <input type="text" class="form-control" name="nome" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Inserisci il tuo nome">
+
+</div>
+<div class="form-group">
+
+  <input type="text" class="form-control"  name="descrizione" id="exampledescEmail1" aria-describedby="emailHelp" placeholder="Inserisci una descrizione">
+
+</div>
+<input id="uploadFile" type="submit" value="Carica" disabled/>
+
 </form>
-		
+
 
 		</div>
 	<div class="col-lg-3"></div>
 	</div>
 
 	<div class="container-fluid">
-		
+
 			<div class="row" th:each="file : ${files}">
-			
+
 				<div class="col-lg-12 spazio"></div>
-				<div class="col-lg-2 col-md-2 col-sm-2 spazio"></div>
-				<div class="col-lg-8  col-md-8 col-sm-8 post">
-				<input type="hidden" value="${file.id}">
-				<div class="col-lg-12 testo"><h3 th:text="${file.nome}"></h3></div>
-				<img class="imgPost" th:src="${'data:image/jpeg;base64,' + file.fileContent}"  />
-				<div class="col-lg-12 testo"><h3 th:text="${file.description}"></h3></div>
-				</div>
+								<div class="col-lg-4 col-md-4 col-sm-4 spazio"></div><div class=" card col-lg-4 col-md-4 col-sm-4" style="width: 18rem;background-color:#82923d;border-radius:5%;border:5px solid white;">
+								<h5 class="card-title" th:text="${file.nome}" style="background-color:#adbaa4;margin-top: 12px;"></h5>
+  <img class="card-img-top embed-responsive-item" th:src="${'data:image/jpeg;base64,' + file.fileContent}" alt="Card image cap">
+  <div class="card-body">
+    
+    <p class="card-text" th:text="${file.description}" style="background-color:#adbaa4;"></p>
+   
+  </div>
+</div>	<div class="col-lg-4 col-md-4 col-sm-4 spazio"></div>
 				<div class="col-lg-2 col-md-2 col-sm-2 spazio"></div>
 				<div class="col-lg-12  col-md-12 col-sm-12 boxCommento">
 				<div class="col-lg-12  col-md-12 col-sm-12"><h3>Commenti</h3></div>
 				
+
 				<div class="col-lg-12  col-md-12 col-sm-12" th:each="commento : ${file.commenti}">
-				
-			
+
+
 				<div class="col-lg-12 col-md-12 col-sm-12"><h4 class="commento" th:text="${commento.nomeUtente +' : '+ commento.commento}"></h4></div>
-			
+
 				</div>
-				<div class="col-lg-12  col-md-12 col-sm-12"><input th:id="${'addNomeCommento_'+file.id}" placeHolder="Inserisci il tuo nome" class="inserisciCommento" type="text"  name="fname"><input th:id="${'addinputCommento_'+file.id}" placeHolder="Inserisci il tuo commento" class="inserisciCommento" type="text"  name="fname"><button  th:id="${'addCommento_'+file.id}" class="inserisciCommento" type="button">Commenta</button><br></div>
+				<div class="col-lg-12  col-md-12 col-sm-12"><input th:id="${'addNomeCommento_'+file.id}" placeHolder="Inserisci il tuo nome" class="form-control" type="text"  name="fname"><input th:id="${'addinputCommento_'+file.id}" placeHolder="Inserisci il tuo commento" class="form-control"type="text"  name="fname"><button  th:id="${'addCommento_'+file.id}" class="btn btn-secondary" type="button">Commenta</button><br></div>
 				</div>
                     <div class="col-lg-2 col-md-2 col-sm-2">
                         <img src="cuore.png" id="cuore1" class="ribbon" />
@@ -241,7 +293,7 @@
 
 
 			</div>
-		
+
 	</div>
 
 </body>
@@ -249,42 +301,72 @@
 <script>
 
 $(".custom-file-input").on("change", function() {
+
   var fileName = $(this).val().split("\\").pop();
   $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
+  
   $("#uploadFile").prop("disabled",false);
 });
 
+$('#formUpload').on('submit',function(event) {
+	event.preventDefault();
+$("#exampleInputEmail1").removeClass("error");
+$("#exampledescEmail1").removeClass("error");
+  
+  var nome=$("#exampleInputEmail1").val();
+  var desc=$("#exampledescEmail1").val();
+  if(desc!=null && desc!="" && desc!=undefined && nome!=null && nome!="" && nome!=undefined){
+  event.currentTarget.submit()}else{
+  if(desc==null || desc=="" || desc==undefined){
+	$("#exampleInputEmail1").addClass("error");}
+	if( nome==null || nome=="" || nome==undefined){
+	$("#exampledescEmail1").addClass("error");}
+  }
+});
+
 $("button[id^='addCommento_']").on("click", function() {
+	
 	var splittedId = this.id.split("_");
 	var id = splittedId[splittedId.length - 1];
-	console.log("************"+id);
+	var origin   = window.location.origin;   
+	console.log("************"+origin);
+	$("#addinputCommento_"+id).removeClass("error");
+	$("#addNomeCommento_"+id).removeClass("error");
 	var commento = $("#addinputCommento_"+id).val();
 	var nome = $("#addNomeCommento_"+id).val();
 	console.log("************"+commento);
+	
+	if(commento!=null && commento!="" && commento!=undefined && nome!=null && nome!="" && nome!=undefined){
 	var xhr = new XMLHttpRequest();
-	var url = "http://localhost:8080/commento";
+	var url = origin+"/commento";
 	var parametri = "commento="+commento+"&postId="+id+"&nome="+nome;
 	xhr.open('POST', url);
 	// imposto l'header per informare che stiamo facendo una richiesta POST application/x-www-form-urlencoded
 	xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
- 
+
 // questa funzione verrà chiamata al cambio di stato della chiamata AJAX
 xhr.onreadystatechange = function () {
+var origin   = window.location.origin;
   var DONE = 4; // stato 4 indica che la richiesta è stata effettuata.
   var OK = 200; // se la HTTP response ha stato 200 vuol dire che ha avuto successo.
   if (xhr.readyState === DONE) {
     if (xhr.status === OK) {
       console.log(xhr.responseText);
-      window.location.replace("http://localhost:8080/upload"); // Questo è il corpo della risposta HTTP
+      window.location.replace(origin+"/upload"); // Questo è il corpo della risposta HTTP
     } else {
       console.log('Error: ' + xhr.status); // Lo stato della HTTP response.
     }
   }
 };
- 
+
 // Invia la richiesta a server-side.php
-xhr.send(parametri);
-  
+xhr.send(parametri);}else{
+	if(commento==null || commento=="" || commento==undefined){
+	$("#addinputCommento_"+id).addClass("error");}
+	if( nome==null || nome=="" || nome==undefined){
+	$("#addNomeCommento_"+id).addClass("error");}
+}
+
 });
 </script>
 </html>
