--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -114,6 +114,27 @@
     height:25%;
     width:25%;
     }
+#schermata_caricamento {
+ 
+  width: 100%;
+ 
+  height:100%;
+ 
+  position:fixed;
+ 
+  top:0;
+ 
+  left:0;
+ 
+  background-color:white;
+ 
+  background-image:url(Gear-0.2s-200px.gif);
+ 
+  background-repeat:no-repeat;
+   
+  background-position:center;
+  z-index:1000;
+}
     
      	/******************* Timeline Demo - 5 *****************/
 .main-timeline5{overflow:hidden;position:relative}
@@ -158,7 +179,8 @@
 </style>
 
 <body>
-
+<div id="schermata_caricamento"></div>
+ <div id="schermata_caricamento2">
     <div id="content">
         <img src="ulivo2.png" class="ribbon" />
     </div>
@@ -293,7 +315,7 @@
 
 
 
-
+</div>
 </body>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
@@ -304,5 +326,9 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
-
+<script>
+$( document ).ready(function() {
+   $("#schermata_caricamento").hide();
+});
+</script>
 </html>
