--- a/src/main/resources/templates/uploadForm.html
+++ b/src/main/resources/templates/uploadForm.html
@@ -291,6 +291,14 @@ div.cropper {
 			</div>
 				</div>
 				<div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12 spazio" style="height:5vh;">
+                    
+                    </div>
+
+
+
+			</div>
+				<div class="row">
                     <div class="col-lg-2 col-md-2 col-sm-2">
                         <img src="cuore.png" id="cuore1" class="ribbon" />
                     </div>
@@ -304,14 +312,7 @@ div.cropper {
 
 
 			</div>
-			<div class="row">
-                    <div class="col-lg-12 col-md-12 col-sm-12 spazio">
-                    
-                    </div>
-
-
-
-			</div>
+			
 
 	</div>
 </div>
