--- a/src/main/resources/templates/uploadForm.html
+++ b/src/main/resources/templates/uploadForm.html
@@ -286,7 +286,7 @@ div.cropper {
 	<div class="container-fluid">
 
 			<div class="row">
-			<div class="col-lg-4 col-md-4 col-sm-4 "th:each="file : ${files}" style="height:33vw;padding:0 0 0 0;">
+			<div class="col-lg-4 col-md-4 col-sm-4 "th:each="file : ${files}" style="height:33vw;padding:0.5vh 0.5vh 0.5vh 0.5vh;">
 			<img  th:src="${'data:image/jpeg;base64,' + file.fileContent}" alt="Card image cap" style="object-fit: cover;width:100%;height:100%;margin-bottom:5vh">
 			</div>
 				</div>
