--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -4,23 +4,23 @@
     <title>Home Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Prata">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dancing+Script">
     
  
 </head>
 <style>
     body {
-        font-family: "Prata", sans-serif;
+        font-family: "Dancing Script", sans-serif;
         font-size: 30px;
         text-shadow: 3px 3px 3px #ababab;
     }
     
     h3,h4{
-    font-family: "Prata", sans-serif;
+    font-family: "Dancing Script", sans-serif;
     }
     
 	p {
-	font-family: "Prata", sans-serif;
+	font-family: "Dancing Script", sans-serif;
 	}
     #intestazione {
         height: 5rem;
@@ -307,16 +307,16 @@
                 <br>
                 <div class="row">
                 <div class="col-lg-12 spazio"></div>
-								<div class="col-lg-3 col-md-3 col-sm-3 spazio"></div><div class=" card col-lg-6 col-md-6 col-sm-6" style="width: 18rem;padding-right: 0px;padding-left: 0px;">
-								<h5 class="card-title" th:text="${file.nome}"></h5>
+								<div class="col-lg-1 col-md-1 col-sm-1 spazio"></div><div class=" card col-lg-10 col-md-10 col-sm-10" style="width: 18rem;padding-right: 0px;padding-left: 0px;">
+								<h5 class="card-title"  style="background-color:#adbaa4;margin-bottom: 0px;" th:text="${file.nome}"></h5>
   <img class="card-img-top embed-responsive-item" th:src="${'data:image/jpeg;base64,' + file.content}" alt="Card image cap">
-  <div class="card-body">
+  <div class="card-body" style="padding-left: 0px;padding-bottom: 0px;padding-right: 0px;padding-top: 0px;">
     
     <p class="card-text" th:text="${file.description}" style="background-color:#adbaa4;"></p>
    
   </div>
-</div>	<div class="col-lg-3 col-md-3 col-sm-3 spazio"></div>
-				<div class="col-lg-2 col-md-2 col-sm-2 spazio"></div>
+</div>	<div class="col-lg-1 col-md-1 col-sm-1 spazio"></div>
+				<div class="col-lg-2 col-md-2 col-sm-2 spazio"></div><br>
 				<div class="col-lg-12  col-md-12 col-sm-12 boxCommento">
 			
 				
