--- a/src/main/resources/templates/uploadForm.html
+++ b/src/main/resources/templates/uploadForm.html
@@ -2,22 +2,22 @@
 <head>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Prata">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dancing+Script">
  </head>
 <style>
     body {
-        font-family: "Prata", sans-serif;
+        font-family: "Dancing Script", sans-serif;
         font-size: 30px;
         text-shadow: 3px 3px 3px #ababab;
         background-color: #adbaa4;
     }
 
     h3,h4{
-    font-family: "Prata", sans-serif;
+    font-family: "Dancing Script", sans-serif;
     }
 
 	p {
-	font-family: "Prata", sans-serif;
+	font-family: "Dancing Script", sans-serif;
 	}
     .spazio {
         height: 5rem;
