--- a/src/main/resources/templates/uploadForm.html
+++ b/src/main/resources/templates/uploadForm.html
@@ -153,6 +153,129 @@ div.cropper {
   overflow: hidden;
 }
 
+.be-comment-block {
+    margin-bottom: 50px !important;
+    border: 1px solid #edeff2;
+    border-radius: 2px;
+    padding: 50px 70px;
+    border:1px solid #ffffff;
+}
+
+.comments-title {
+    font-size: 16px;
+    color: #262626;
+    margin-bottom: 15px;
+    font-family: 'Conv_helveticaneuecyr-bold';
+}
+
+.be-img-comment {
+    width: 60px;
+    height: 60px;
+    float: left;
+    margin-bottom: 15px;
+}
+
+.be-ava-comment {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+}
+
+.be-comment-content {
+    margin-left: 80px;
+}
+
+.be-comment-content span {
+    display: inline-block;
+    width: 49%;
+    margin-bottom: 15px;
+}
+
+.be-comment-name {
+    font-size: 13px;
+    font-family: 'Conv_helveticaneuecyr-bold';
+}
+
+.be-comment-content a {
+    color: #383b43;
+}
+
+.be-comment-content span {
+    display: inline-block;
+    width: 49%;
+    margin-bottom: 15px;
+}
+
+.be-comment-time {
+    text-align: right;
+}
+
+.be-comment-time {
+    font-size: 11px;
+    color: #b4b7c1;
+}
+
+.be-comment-text {
+    font-size: 13px;
+    line-height: 18px;
+    color: #7a8192;
+    display: block;
+    background: #f6f6f7;
+    border: 1px solid #edeff2;
+    padding: 15px 20px 20px 20px;
+}
+
+.form-group.fl_icon .icon {
+    position: absolute;
+    top: 1px;
+    left: 16px;
+    width: 48px;
+    height: 48px;
+    background: #f6f6f7;
+    color: #b5b8c2;
+    text-align: center;
+    line-height: 50px;
+    -webkit-border-top-left-radius: 2px;
+    -webkit-border-bottom-left-radius: 2px;
+    -moz-border-radius-topleft: 2px;
+    -moz-border-radius-bottomleft: 2px;
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+}
+
+.form-group .form-input {
+    font-size: 13px;
+    line-height: 50px;
+    font-weight: 400;
+    color: #b4b7c1;
+    width: 100%;
+    height: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border: 1px solid #edeff2;
+    border-radius: 3px;
+}
+
+.form-group.fl_icon .form-input {
+    padding-left: 70px;
+}
+
+.form-group textarea.form-input {
+    height: 150px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 #schermata_caricamento {
@@ -177,17 +300,22 @@ div.cropper {
   z-index:1000;
 }
 .modal {
-z-index:1;
+z-index:99;
 display:none;
-padding-top:10px;
-position:fixed;
-left:0;
-top:0;
-width:100%;
-height:100%;
-overflow:auto;
-background-color:rgb(0,0,0);
-background-color:rgba(0,0,0,0.8)
+width: 100%;
+ 
+  height:100%;
+ 
+  position:fixed;
+ 
+  top:0;
+ 
+  left:0;
+ 
+  z-index:1000;
+
+background-color:rgb(0,0,0);!important
+background-color:rgba(0,0,0,0.8);!important
 }
 
 .modal-content{
@@ -197,6 +325,7 @@ display: block;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+ 
 }
 
 
@@ -382,8 +511,13 @@ display:inline-block;
 <div id="modal01" class="modal" onclick="this.style.display='none'">
   <span class="close">&times;&nbsp;&nbsp;&nbsp;&nbsp;</span>
   <div class="modal-content">
-    <img id="img01" style="max-width:100%">
-  </div>
+    <img  id="img01" style="max-width:100%">
+   
+
+
+</div>
+
+</div>
 </div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -393,8 +527,16 @@ $( document ).ready(function() {
 });
 
 function onClick(element) {
-  document.getElementById("img01").src = element.src;
-  document.getElementById("modal01").style.display = "block";
+  console.log("********");
+	var splittedId = element.id.split("_");
+	var id = splittedId[splittedId.length - 1];
+	var origin   = window.location.origin;   
+	console.log(id+"************"+origin);
+	var xhr = new XMLHttpRequest();
+	var url = origin+"/post";
+	var parametri = "id="+id;
+	window.location.replace(origin+"/post?id="+id);
+    
 }
 $(".custom-file-input").on("change", function() {
 
