--- a/src/main/resources/templates/uploadForm.html
+++ b/src/main/resources/templates/uploadForm.html
@@ -510,7 +510,7 @@ display:inline-block;
 	</div>
 	<div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 spazio" style="height:5vh;">
-                    <button id="caricaAltro" class="btn btn-secondary" style="width:90%;>Carica Altro</button>
+                    <button id="caricaAltro" class="btn btn-secondary" style="width:90%;">Carica Altro</button>
                     <input id="count" name="prodId" type="hidden" value="1">
                     </div>
 <div id="modal01" class="modal" onclick="this.style.display='none'">
