--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -271,9 +271,9 @@
                 <br>
                 <br>
                 <div style="font-size: 200%;">
-                    <p style="display: inline;color:white">DEBORAH</p>
+                    <p style="display: inline;color:white">Deborah</p>
                     <p style="display: inline;color:#82923d">&</p>
-                    <p style="display: inline;color:#3c4e43">VINCENZO</p>
+                    <p style="display: inline;color:#3c4e43">Vincenzo</p>
                 </div>
 
                 <div class="row">
