--- a/src/main/resources/templates/uploadForm.html
+++ b/src/main/resources/templates/uploadForm.html
@@ -137,7 +137,7 @@
     border-color:black;
     border-width:2px;
     }
-    
+
     .error{
  	border:1px solid red;
     }
@@ -279,23 +279,23 @@ div.cropper {
 
 
 #schermata_caricamento {
- 
+
   width: 100%;
- 
+
   height:100%;
- 
+
   position:fixed;
- 
+
   top:0;
- 
+
   left:0;
- 
+
   background-color:white;
- 
-  background-image:url(Gear-0.2s-200px.gif);
- 
+
+  background-image:url(love.gif);
+
   background-repeat:no-repeat;
-   
+
   background-position:center;
   z-index:1000;
 }
@@ -303,15 +303,15 @@ div.cropper {
 z-index:99;
 display:none;
 width: 100%;
- 
+
   height:100%;
- 
+
   position:fixed;
- 
+
   top:0;
- 
+
   left:0;
- 
+
   z-index:1000;
 
 background-color:rgb(0,0,0);!important
@@ -325,7 +325,7 @@ display: block;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
- 
+
 }
 
 
@@ -349,8 +349,8 @@ text-decoration:none;float:right;font-size:24px;font-weight:bold;color:white
 width:200px;
 display:inline-block;
 }
-.modal-content, #caption {   
-  
+.modal-content, #caption {
+
     -webkit-animation-name: zoom;
     -webkit-animation-duration: 0.6s;
     animation-name: zoom;
@@ -359,12 +359,12 @@ display:inline-block;
 
 
 @-webkit-keyframes zoom {
-    from {-webkit-transform:scale(0)} 
+    from {-webkit-transform:scale(0)}
     to {-webkit-transform:scale(1)}
 }
 
 @keyframes zoom {
-    from {transform:scale(0)} 
+    from {transform:scale(0)}
     to {transform:scale(1)}
 }
 
@@ -382,10 +382,10 @@ display:inline-block;
        <div class="row" id="intestazione">
     <div class="col-lg-8 col-md-6 col-sm-6"></div>
         <div class="col-lg-4 col-md-6 col-sm-6">
- 
+
     <button class="btn btn-outline-success" type="button"> <a class="btn btn-secondary" href="/" role="button">Home</a></button>
     <button class="btn btn-sm btn-outline-secondary" type="button"> <a class="btn btn-secondary" href="/upload" role="button">Post</a></button>
- 
+
 
         </div>
     </div>
@@ -485,7 +485,7 @@ display:inline-block;
 				</div>
 				<div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 spazio" style="height:5vh;">
-                    
+
                     </div>
 
 
@@ -505,24 +505,16 @@ display:inline-block;
 
 
 			</div>
-			
+
 
 	</div>
+	<div id="loading" style="display:none;"><img src="Eclipse-1s-200px.gif"/></div>
 	<div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 spazio" style="height:5vh;">
                     <button id="caricaAltro" class="btn btn-secondary" style="width:90%;">Carica Altro</button>
                     <input id="count" name="prodId" type="hidden" value="1">
                     </div>
-<div id="modal01" class="modal" onclick="this.style.display='none'">
-  <span class="close">&times;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-  <div class="modal-content">
-    <img  id="img01" style="max-width:100%">
-   
 
-
-</div>
-
-</div>
 </div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -530,59 +522,63 @@ display:inline-block;
 $( document ).ready(function() {
    $("#schermata_caricamento").hide();
 });
-$("#caricaAltro").on("click",function(){
-var xhr = new XMLHttpRequest();
-	
-	var origin   = window.location.origin; 
 
-	var page = $("#count").val(); 
+
+
+$("#caricaAltro").on("click",function(){
+//var xhr = new XMLHttpRequest();
+	$('#loading').show();
+	var origin   = window.location.origin;
+
+	var page = $("#count").val();
 	var integer = parseInt(page, 10) ;
 	var parametri = "page="+integer;
 	var url = origin+"/other?"+parametri;
-	xhr.open('GET', url);
-	// imposto l'header per informare che stiamo facendo una richiesta POST application/x-www-form-urlencoded
-	//xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
-	
-	xhr.onreadystatechange = function () {
-	var body = xhr.responseText;
-	var text = body;
-  var DONE = 4; // stato 4 indica che la richiesta è stata effettuata.
-  var OK = 200; // se la HTTP response ha stato 200 vuol dire che ha avuto successo.
-  if (xhr.readyState === DONE) {
-    if (xhr.status === OK) {
-      
+	fetch(url)
+  .then(
+    function(response) {
+      if (response.status !== 200) {
+        console.log('Looks like there was a problem. Status Code: ' +
+          response.status);
+        return;
+      }
 
-     $( "#posts" ).append(text);
-    
- // Questo è il corpo della risposta HTTP
-    } else {
-      console.log('Error: ' + xhr.status); // Lo stato della HTTP response.
-
-    }
-
-  }
-  }
-	xhr.send(null);
-	integer =integer+1;
+      // Examine the text in the response
+      response.text().then(function(data) {
+      $( "#posts" ).append(data);
+    console.log(data); // JSON data parsed by `data.json()` call
+    integer =integer+1;
 	$("#count").val(integer);
+        console.log(data);
+      });
+    }
+  )
+  .catch(function(err) {
+    console.log('Fetch Error :-S', err);
+  });
+	
+
+
+ $('#loading').hide();
+	
 });
 function onClick(element) {
   console.log("********");
 	var splittedId = element.id.split("_");
 	var id = splittedId[splittedId.length - 1];
-	var origin   = window.location.origin;   
+	var origin   = window.location.origin;
 	console.log(id+"************"+origin);
 	var xhr = new XMLHttpRequest();
 	var url = origin+"/post";
 	var parametri = "id="+id;
 	window.location.replace(origin+"/post?id="+id);
-    
+
 }
 $(".custom-file-input").on("change", function() {
 
   var fileName = $(this).val().split("\\").pop();
   $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
-  
+
   $("#uploadFile").prop("disabled",false);
 });
 
@@ -591,7 +587,7 @@ $('#formUpload').on('submit',function(event) {
 $("#schermata_caricamento").show();
 $("#exampleInputEmail1").removeClass("error");
 $("#exampledescEmail1").removeClass("error");
-  
+
   var nome=$("#exampleInputEmail1").val();
   var desc=$("#exampledescEmail1").val();
   if(desc!=null && desc!="" && desc!=undefined && nome!=null && nome!="" && nome!=undefined){
@@ -610,14 +606,14 @@ $("#schermata_caricamento").hide();
 	console.log("********");
 	var splittedId = this.id.split("_");
 	var id = splittedId[splittedId.length - 1];
-	var origin   = window.location.origin;   
+	var origin   = window.location.origin;
 	console.log(id+"************"+origin);
 	$("#addinputCommento_"+id).removeClass("error");
 	$("#addNomeCommento_"+id).removeClass("error");
 	var commento = $("#addinputCommento_"+id).val();
 	var nome = $("#addNomeCommento_"+id).val();
 	console.log("************"+commento);
-	
+
 	if(commento!=null && commento!="" && commento!=undefined && nome!=null && nome!="" && nome!=undefined){
 	$("#schermata_caricamento").show();
 	var xhr = new XMLHttpRequest();
