--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -282,14 +282,14 @@
     }
   }
 
-  /*@media screen and (max-width: 900px) {
+  @media screen and (max-width: 900px) {
     .timeline ul li div {
-      width: 100%;
+      width: 250px;
     }
 
     .timeline ul li:nth-child(even) div {
       left: -289px;
-      /*250+45-6
+      /*250+45-6*/
     }
   }
 
@@ -313,7 +313,7 @@
     }
 
     
-  }*/
+  }
 . pic {
       width: calc(100vw - 110px);
     }
@@ -435,7 +435,7 @@
             <br />
           </div>
 
-          <section id="time"class="timeline timeline-infinite" style="font-family: 'Prata', sans-serif;display:none;">
+          <section id="time"class="timeline timeline-infinite" style="font-family: 'Prata', sans-serif;">
             <ul>
               <li>
                 <div>
@@ -587,7 +587,7 @@
 <script>
   $(document).ready(function() {
     $("#schermata_caricamento").hide();
-
+	$("#time").hide();
   });
 function scrollFunction() {
     $("#time").show();
