--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -596,7 +596,7 @@ function total() {
    scrollFunction();
 callbackFunc();
 }
-window.onscroll = total;
+//window.onscroll = total;
 window.addEventListener('touchstart', function(e){
        $("#time").show();
     }, false);
