--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -564,7 +564,12 @@
                 </div>
               </div>
             </div>
-
+            <div class="col-lg-12 col-md-12 col-sm-12">
+              <h1>CountDown Al Grande Giorno</h1>
+            </div>
+			<div class="col-lg-12 col-md-12 col-sm-12">
+				<h1 id="demo" style="font-size:10vw;"></h1>
+			</div>
           </div>
           <br />
           <br />
@@ -624,6 +629,36 @@ window.addEventListener('touchstart', function(e){
 
   window.addEventListener("load", callbackFunc);
   window.addEventListener("scroll", total);
+  window.addEventListener("scroll", callbackFunc);
+  
+  var countDownDate = new Date("Jul 16, 2021 00:00:00").getTime();
+
+// Update the count down every 1 second
+var x = setInterval(function() {
+
+  // Get today's date and time
+  var now = new Date().getTime();
+
+  // Find the distance between now and the count down date
+  var distance = countDownDate - now;
+
+  // Time calculations for days, hours, minutes and seconds
+  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+  // Display the result in the element with id="demo"
+  document.getElementById("demo").innerHTML = days + "G " + hours + "h "
+  + minutes + "m " + seconds + "s ";
+
+  // If the count down is finished, write some text
+  if (distance < 0) {
+    clearInterval(x);
+    document.getElementById("demo").innerHTML = "EXPIRED";
+  }
+}, 1000);
+
 </script>
 
 </html>
