--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -655,7 +655,7 @@ var x = setInterval(function() {
   // If the count down is finished, write some text
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("demo").innerHTML = "EXPIRED";
+    document.getElementById("demo").innerHTML = "Il Matrimonio è oggi!!!!";
   }
 }, 1000);
 
