--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -649,8 +649,11 @@ var x = setInterval(function() {
   var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
   // Display the result in the element with id="demo"
-  document.getElementById("demo").innerHTML = days + "G " + hours + "h "
-  + minutes + "m " + seconds + "s ";
+if(days==0){
+  document.getElementById("demo").innerHTML = hours + "h "
+  + minutes + "m " + seconds + "s ";}else{
+document.getElementById("demo").innerHTML = days + "G " + hours + "h "
+  + minutes + "m " + seconds + "s ";}
 
   // If the count down is finished, write some text
   if (distance < 0) {
