--- a/src/main/resources/templates/uploadForm.html
+++ b/src/main/resources/templates/uploadForm.html
@@ -581,12 +581,13 @@ $(".custom-file-input").on("change", function() {
  var file = $(this).prop('files')[0];
  //var file = fileList[0];
  if(isFileImage(file)){
-  var fileName = $(this).val().split("\\").pop();
-  $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
+	if(isFileImage10MB(file)){
+  		var fileName = $(this).val().split("\\").pop();
+  		$(this).siblings(".custom-file-label").addClass("selected").html(fileName);
 
-  $("#uploadFile").prop("disabled",false);
-  }
-  else{
+  		$("#uploadFile").prop("disabled",false);
+  	}else{alert("Si prega di caricare file inferiori a 10MB");}
+  }else{
  alert("Si prega di caricare file Jpeg,Gif o Png");
   }
 });
@@ -597,6 +598,15 @@ function isFileImage(file) {
      else if(file['type']=='image/gif')
     	return  true;
     else if(file['type']=='image/png')
+    	return  true;		
+    else
+    	return false;	
+
+}
+
+function isFileImage10MB(file) {
+    
+    if(file['size']<10485760)
     	return  true;		
     else
     	return false;	
