--- a/src/main/resources/templates/regalo.html
+++ b/src/main/resources/templates/regalo.html
@@ -340,13 +340,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">Home </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/upload">Post</a>
       </li>
  	<li class="nav-item">
-        <a class="nav-link" href="/regalo">Regalo</a>
+        <a class="nav-link" href="/regalo">Regalo <span class="sr-only">(current)</span></a>
       </li>
      
     </ul>
@@ -421,19 +421,28 @@
           </div>
           <br>
           <br>
-          <div class="row">
-            <div class="col-lg-12">
-              <img src="spsi2.png" class="ribbon" />
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-6 col-sm-6 col-md-6">
+<div class="row">
 
-            </div>
 
+		<div class="col-lg-2 col-md-2 col-sm-2"></div>
+            <div class="col-lg-8 col-md-8 col-sm-8">
+              <h1>Il pensiero più bello che possiate farci è essere con noi nel grande giorno Ma se gradite farci un regalo, preferiamo metterlo nel salvadanaio, e quando lo useremo in futuro, penseremo con gioia a voi ed al vostro gesto.</h1>
+            </div>
+<div class="col-lg-2 col-md-2 col-sm-2"></div>
           </div>
-<br/>
-<br/>
+<div class="row">
+
+
+		<div class="col-lg-2 col-md-2 col-sm-2"></div>
+            <div class="col-lg-8 col-md-8 col-sm-8">
+              <h1>Qui trovi le coordinate bancarie del nostro conto presso Intesa Sanpaolo 
+ IBAN:
+IT22E0306904070100000001844 </h1><h2>Intestatario Deborah Coletto</h2>
+            </div>
+<div class="col-lg-2 col-md-2 col-sm-2"></div>
+          </div>
+ 		<br>
+          <br>
  <div class="row">
             <div class="col-lg-2 col-md-2 col-sm-2">
               <img src="cuore.png" id="cuore1" class="ribbon" />
@@ -447,167 +456,7 @@
 
 
 
-          </div>
-<br/>
-<br/>
-          <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12">
-              <h1>La TimeLine del Nostro Matrimonio</h1>
-            </div>
-            <br />
-            <br />
-          </div>
 
-          <section id="time"class="timeline timeline-infinite" style="font-family: 'Prata', sans-serif;">
-            <ul>
-              <li>
-                <div>
-                  <div class="card" style="width: 18rem;">
-                    <img class="card-img-top pic" src="preparativi.jpg" alt="Card image cap">
-
-                  </div>
-                  <div class="pic" style="width: 18rem;">
-                    <h5>Ore 14:00</h5>
-                    <p>I Preparativi</p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div>
-                  <div class="card" style="width: 18rem;left: 15px;">
-                    <img class="card-img-top pic" src="chiesa.jpg" alt="Card image cap">
-
-                  </div>
-                  <div class="pic" style="width: 18rem;left: 15px;">
-                    <h5>Ore 16:00</h5>
-                    <p>Inizio della Cerimonia</p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div>
-                  <div class="card" style="width: 18rem;">
-                    <img class="card-img-top pic" src="anelli.jpg" alt="Card image cap">
-
-                  </div>
-                  <div class="pic" style="width: 18rem;">
-                    <h5>Ore 17:00</h5>
-                    <p>Il Nostro Si!</p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div>
-                  <div class="card" style="width: 18rem;left: 15px;">
-                    <img class="card-img-top pic" src="auto.gif" alt="Card image cap">
-
-                  </div>
-                  <div class="pic" style="width: 18rem;left: 15px;">
-                    <h5>Ore 18:30</h5>
-                    <p>Ci vediamo in masseria</p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div>
-                  <div class="card" style="width: 18rem;">
-                    <img class="card-img-top pic" src="aperitivo.png" alt="Card image cap">
-
-                  </div>
-                  <div class="pic" style="width: 18rem;">
-                    <h5>Ore 19:00</h5>
-                    <p>Aperitivo</p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div>
-                  <div class="card" style="width: 18rem;left: 15px;">
-                    <img class="card-img-top pic" src="cena.jpg" alt="Card image cap">
-
-                  </div>
-                  <div class="pic" style="width: 18rem;left: 15px;">
-                    <h5>Ore 20:30</h5>
-                    <p>Cena</p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div>
-                  <div class="card" style="width: 18rem;left: 15px;">
-                    <img class="card-img-top pic" src="torta1.png" alt="Card image cap">
-
-                  </div>
-                  <div class="pic" style="width: 18rem;left: 15px;">
-                    <h5>Ore 24:00</h5>
-                    <p>Taglio della Torta</p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div>
-                  <div class="card" style="width: 18rem;left: 15px;">
-                    <img class="card-img-top pic" src="ballo.png" alt="Card image cap">
-
-                  </div>
-                  <div class="pic" style="width: 18rem;left: 15px;">
-                    <h5>Ore 01:00</h5>
-                    <p>Party</p>
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </section>
-          <br />
-          <br />
-          <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12">
-              <h1>I Luoghi del Nostro Matrimonio</h1>
-            </div>
-            <br />
-            <br />
-
-            <div class="col-lg-12col-md-12 col-sm-12">
-              <div class="card" style="width: 18rem;margin-bottom: 5vh;">
-                <img class="card-img-top" src="chiesa2.jpg" alt="Card image cap">
-                <div class="card-body" style="background-color:#adbaa4;padding-left: 0px;padding-bottom: 0px;padding-right: 0px;padding-top: 0px;">
-                  <h5 class="card-title" style="background-color:#adbaa4;margin-bottom: 0px;">Cattedrale di "San Michele Arcangelo"</h5>
-                  <p class="card-text" style="background-color:#adbaa4;">Clicca per visualizzare la mappa</p>
-                  <a href="https://goo.gl/maps/N3HsNJRRsNmPq8uW8" style="background-color:#adbaa4;border-color:black;" class="btn btn-primary">Clicca Qui</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-12 col-md-12 col-sm-12">
-              <div class="card" style="width: 18rem;margin-bottom: 5vh;">
-                <img class="card-img-top" src="masseria.png" alt="Card image cap">
-                <div class="card-body" style="background-color:#adbaa4;padding-left: 0px;padding-bottom: 0px;padding-right: 0px;padding-top: 0px;">
-                  <h5 class="card-title" style="background-color:#adbaa4;margin-bottom: 0px;">Masseria "La Macina"</h5>
-                  <p class="card-text" style="background-color:#adbaa4;">Clicca per visualizzare la mappa</p>
-                  <a href="https://goo.gl/maps/qnPmtmqKj94aDbY29" style="background-color:#adbaa4;border-color:black;" class="btn btn-primary">Clicca qui</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-12 col-md-12 col-sm-12">
-              <h1>CountDown Al Grande Giorno</h1>
-            </div>
-			<div class="col-lg-12 col-md-12 col-sm-12">
-				<h1 id="demo" style="font-size:10vw;"></h1>
-			</div>
-          </div>
-          <br />
-          <br />
-
-          <hr>
-
-        </div>
-      </div>
-    </div>
-
-
-
-
-
-  </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
