--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -158,6 +158,27 @@
 </style>
 
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+ 
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/upload">Post</a>
+      </li>
+ 	<li class="nav-item">
+        <a class="nav-link" href="/regalo">Regalo</a>
+      </li>
+     
+    </ul>
+  </div>
+</nav>
     <div id="content">
         <img src="ulivo2.png" class="ribbon" />
     </div>
@@ -166,9 +187,7 @@
     <div class="col-lg-8 col-md-6 col-sm-6"></div>
         <div class="col-lg-4 col-md-6 col-sm-6">
  
-    <button class="btn btn-outline-success" type="button"> <a class="btn btn-secondary" href="/" role="button">Home</a></button>
-    <button class="btn btn-sm btn-outline-secondary" type="button"> <a class="btn btn-secondary" href="/upload" role="button">Post</a></button>
- 
+
 
         </div>
     </div>
