--- a/src/main/resources/templates/regalo.html
+++ b/src/main/resources/templates/regalo.html
@@ -437,7 +437,7 @@
             <div class="col-lg-8 col-md-8 col-sm-8">
               <h1>Qui trovi le coordinate bancarie del nostro conto presso Intesa Sanpaolo 
  IBAN:
-IT22E0306904070100000001844 </h1><h2>Intestatario Deborah Coletto</h2>
+<h1 style="font-family:Calibri;">IT22E0306904070100000001844</h1> </h1><h2>Intestatario Deborah Coletto</h2>
             </div>
 <div class="col-lg-2 col-md-2 col-sm-2"></div>
           </div>
