--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -331,27 +331,7 @@
 <body>
 
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
- 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/upload">Post</a>
-      </li>
- 	<li class="nav-item">
-        <a class="nav-link" href="/regalo">Regalo</a>
-      </li>
-     
-    </ul>
-  </div>
-</nav>
 </div>
   <div id="schermata_caricamento"></div>
   <div id="schermata_caricamento2" class="timeline">
@@ -360,10 +340,13 @@
     </div>
 
     <div class="row" id="intestazione">
-      <div class="col-lg-8 col-md-6 col-sm-6"></div>
-      <div class="col-lg-4 col-md-6 col-sm-6">
+      <div class="col-lg-6 col-md-6 col-sm-6"></div>
+      <div class="col-lg-6 col-md-6 col-sm-6">
 
-       
+               <button class="btn btn-lg btn-outline-secondary" style="height:100%;font-size:100%;width:30%;" action="/" type="button">Home</button>
+        <button class="btn btn-lg  btn-outline-secondary" style="height:100%;font-size:100%;width:30%;"  action="/upload"type="button">Post</button>
+<button class="btn btn-lg  btn-outline-secondary" style="height:100%;font-size:100%;width:30%;" action="/regalo" type="button">Regalo</button>
+
 
 
       </div>
@@ -614,6 +597,12 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 <script>
   $(document).ready(function() {
+var size = $( window ).width();
+console.log(size);
+if(size<1000){
+	$("#intestazione").height("10vh");
+$('.btn btn-lg btn-outline-secondary').width("10vw");
+}
     $("#schermata_caricamento").hide();
 	$("#time").hide();
   });
