--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -237,35 +237,20 @@
 </style>
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
- 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/upload">Post</a>
-      </li>
- 	<li class="nav-item">
-        <a class="nav-link" href="/regalo">Regalo</a>
-      </li>
-     
-    </ul>
-  </div>
-</nav>
  <div id="schermata_caricamento2">
     <div id="content">
         <img src="ulivo2.png" class="ribbon" />
     </div>
 
     <div class="row" id="intestazione">
-    <div class="col-lg-8 col-md-6 col-sm-6"></div>
-        <div class="col-lg-4 col-md-6 col-sm-6">
+     <div class="col-lg-6 col-md-6 col-sm-6"></div>
+      <div class="col-lg-6 col-md-6 col-sm-6">
+
+               <button class="btn btn-lg btn-outline-secondary" style="height:100%;font-size:100%;width:30%;" action="/" type="button">Home</button>
+        <button class="btn btn-lg  btn-outline-secondary" style="height:100%;font-size:100%;width:30%;"  action="/upload"type="button">Post</button>
+<button class="btn btn-lg  btn-outline-secondary" style="height:100%;font-size:100%;width:30%;" action="/regalo" type="button">Regalo</button>
+
  
    
  
